--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview",
     "commit": "cz"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -20,7 +26,9 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-plugin-styled-components": "^2.1.1",
     "commitizen": "^4.3.0",
+    "cypress": "^12.12.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
