build: add commitzen and cypress packages

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "commit": "cz"
+    "commit": "cz",
+    "cypress:open": "cypress open"
   },
   "resolutions": {
     "styled-components": "^5"
