build: insert absolute path configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,12 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
   },
   "extends": [
