--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Alias */
+      "baseUrl": "src",
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
